add AddRelatedIngredients helper to make search more user friendly

--- a/src/CocktailRecipeLookup/Views/Ingredients/SearchResults.cshtml
+++ b/src/CocktailRecipeLookup/Views/Ingredients/SearchResults.cshtml
@@ -18,6 +18,7 @@ else
     {        <div class="row">
         <h4>@ingredient.name</h4>
         <div class="col m8">
+            <p>ID: @ingredient.id</p> @*Remove later*@ 
             <p>@ingredient.description</p>
         </div>
         <div class="col m3 offset-m1">
