--- a/src/CocktailRecipeLookup/Views/Drinks/CustomSearch.cshtml
+++ b/src/CocktailRecipeLookup/Views/Drinks/CustomSearch.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Drinks";
+    ViewBag.Title = "Custom Search";
 }
 
 @using CocktailRecipeLookup.Models
@@ -42,7 +42,8 @@
 
         <!-- Dropdown Structure -->
         <ul id='customSearch' class='dropdown-content'>
-            <li><a class="custom-search" id="allContaining">All Containing</a></li>
+            <li><a class="custom-search" id="containingAll">Containing All</a></li>
+            <li><a class="custom-search" id="containingAll">Containing Any</a></li>
             <li><a class="custom-search" id="searchExact">Exact Matches</a></li>
             <li><a class="custom-search" id="whatYouHave">What You Have</a></li>
         </ul>
@@ -59,7 +60,10 @@
     <div class="modal-content">
         <h4>Custom Search</h4>
         <p>
-            <span class="search-definition">All Containing</span> - All drinks containing the specified ingredients will match, including recipes with ingredients not specified.
+            <span class="search-definition">Containing All</span> - Drinks containing all of the specified ingredients will match, including recipes with ingredients not specified.
+        </p>
+        <p>
+            <span class="search-definition">Containing Any</span> - Drinks containing any of the specified ingredients will match, including recipes with ingredients not specified.
         </p>
         <p>
             <span class="search-definition">Exact Match</span> - Only drinks containing all the specified ingredients will match. 
