--- a/src/CocktailRecipeLookup/Views/Drinks/SearchResults.cshtml
+++ b/src/CocktailRecipeLookup/Views/Drinks/SearchResults.cshtml
@@ -34,7 +34,7 @@ else
                         <ul>
                             @foreach (var ingredient in drink.ingredients)
                             {
-                                <li><a asp-controller="Ingredients" asp-action="Details" asp-route-id="@ingredient.id">@ingredient.textPlain</a></li>
+                                <li><a class="black-text" asp-controller="Ingredients" asp-action="Details" asp-route-id="@ingredient.id">@ingredient.textPlain</a></li>
                             }
                         </ul>
                     </div>
