--- a/src/CocktailRecipeLookup/Views/Drinks/UseWhatYouHave.cshtml
+++ b/src/CocktailRecipeLookup/Views/Drinks/UseWhatYouHave.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Drinks";
+    ViewBag.Title = "Use What You Have";
 }
 
 @using CocktailRecipeLookup.Models
@@ -50,12 +50,14 @@
 <div id="help" class="modal">
     <div class="modal-content">
         <h4>Help</h4>
-        <p>Drinks, ingredients, and recipes on ADDb are listed in very specific and not always logical ways. For instance, even with <em>Cointreau</em> selected, recipes using <em>Triple Sec</em> will not match. For best results select all variations of an ingredient. If you need help identifying ingredients or locating a recipe you think is missing from your results, use the search bar at the top of the page.</p>
+        <p>Drinks, ingredients, and recipes on ADDb are listed in very specific and not always logical ways. Our search algorithm will try to include equivilalent ingredients but may not catch everything. If you need help identifying ingredients or locating a recipe you think is missing from your results, use the search bar at the top of the page.</p>
+        <p>To help you retrieve more useful results common ingredients will be included in your search, such as ice cubes, simple syrup, bitters, and soda water, as well as typical garnishes such as lemon, lime, or cherries.</p>
     </div>
     <div class="modal-footer">
         <a href="#!" class="modal-action modal-close waves-effect btn-flat">Close</a>
     </div>
 </div>
+
 
 @* Activate search *@
 <script>
