--- a/src/CocktailRecipeLookup/Views/Ingredients/Details.cshtml
+++ b/src/CocktailRecipeLookup/Views/Ingredients/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    ViewBag.Title = Model.name;
 }
 
 @model CocktailRecipeLookup.Models.Ingredient
@@ -14,11 +15,11 @@
             @if (Model.isAlcoholic)
             {
                 @:Yes
-                    }
+            }
             else
             {
                 @:No
-                    }
+            }
         </p>
         <p>
             Type:  @Model.type
