--- a/src/CocktailRecipeLookup/Views/Drinks/CustomSearch.cshtml
+++ b/src/CocktailRecipeLookup/Views/Drinks/CustomSearch.cshtml
@@ -7,7 +7,7 @@
 
 <h3>Discover Recipes</h3>
 
-<p>Select your available ingredients from the lists below.</p>
+<p>Select your available ingredients from the lists below. Pressing Custom Search will give multiple search options. See help for definitions.</p>
 <br />
 <div class="row">
     <form id="drinkSearch">
