--- a/src/CocktailRecipeLookup/Views/Shared/_Layout.cshtml
+++ b/src/CocktailRecipeLookup/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
     @* Side nav for hamburger *@
     <ul class="side-nav" id="hamburger">
         <li><a asp-controller="Drinks" asp-action="UseWhatYouHave">Use What You Have</a></li>
+        <li><a asp-controller="Drinks" asp-action="CustomSearch">Custom Search</a></li>
     </ul>
     @* Drop down for search *@
 
@@ -33,6 +34,7 @@
                     <a asp-controller="Home" asp-action="Index" class="brand-logo left">Spirit Quest</a>
                     <ul class="right hide-on-med-and-down">
                         <li><a asp-controller="Drinks" asp-action="UseWhatYouHave">Use What You Have</a></li>
+                        <li><a asp-controller="Drinks" asp-action="CustomSearch">Custom Search</a></li>
                     </ul>
                     <a href="#" data-activates="hamburger" class="button-collapse right grey-text text-darken-2"><i class="material-icons">menu</i></a>
                     <ul class="right">
